# aoe2-genie-tooling

./: .gitignore  404.html  GEMINI.md  MIGRATION_PLAN_GenieDatParser.md  README.md  index.html  inspect_creation_info.py  inspect_from_base.py  inspect_task_info.py  inspect_unit_copy.py  inspect_unit_version.py  migrate_imports.py  mkdocs.yml  pyproject.toml  test_adapter.py  test_bytes_clone.py  test_final_integration.py  test_from_base_clone.py  test_gdp.py  test_json_clone.py  test_migrated_imports.py
.agent/: antigravity_agent.md
Actual_Tools/: AGE3NamesV0007.ini  AGENTS.md  README.md  __init__.py  backend.py  compare_backends.py  run_tools.py  run_tools_user.py  test_main.py  test_managers.py
Actual_Tools_GDP/: CHANGELOG.md  __init__.py  backend.py  base_manager.py  compare_build_tasks.py  debug_build_task.py  debug_speed_charge.py  exceptions.py  find_build_tasks.py  gen_stub.py  reproduction_new_unit.py  reproduction_task_civs.py  run_tools.py  run_tools_user.py  scan_task_consistency.py  test_build_task.py  test_corruption.py  test_graphic_props.py  test_main.py  test_managers.py  test_multi_civ_task.py  test_unit_type_change.py  test_user_build_task.py  verify_slots.py  verify_stub.py
Datasets/: __init__.py  tasks.py
Genie-Rust/: AGENTS.md  Cargo.toml  GENIE_STRUCTURE.md  check_compression.py  codegen.py  compare_implementations.py  create_test_files.py  get_ground_truth.py  get_offsets.py  inspect_at_offset.py  inspect_decompressed.py  inspect_gap.py  inspect_rest.py  inspect_start.py  pyproject.toml  robust_inspect.py  test_loader.py  test_mutability.py  test_ref_semantics.py  track_offsets.py
Genie-Rust/src/: datfile.rs  generated_structs.rs  lib.rs  manual_structs.rs
Testing/: genie_edits.json  run_tools_user.py
agents/: README.md
aoe2_genie_tooling/: __init__.py
code_notes/: index.html
docs/: AGENTS.md  FIELD_DISCOVERY.md  FIELD_DISCOVERY_TEST_RESULTS.md  README.md  _manifest.md  civilizations.md  code_notes.md  datasets.md  effects.md  getting-started.md  glossary.md  graphics.md  index.md  overview.md  package-lock.json  package.json  sounds.md  techs.md  (+1 more)
(+447 files in other folders)
