[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Actual_Tools", "Actual_Tools_GDP", "Datasets"]

[project]
name = "aoe2-genie-tooling"
version = "1.2.1"
authors = [
    { name = "GoKuModder" },
]
description = "High-level Python toolkit for editing AoE2 DE DAT files"
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0-only"
keywords = ["aoe2", "age-of-empires", "modding", "dat-file", "genie-engine"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Real Time Strategy",
]
dependencies = [
    # Note: GenieDatParser is expected to be installed locally or available
    # It's imported directly via sys.path manipulation in workspace.py
]

[project.urls]
Homepage = "https://github.com/GoKuModder/aoe2-genie-tooling"
Repository = "https://github.com/GoKuModder/aoe2-genie-tooling"
Documentation = "https://gokumodder.github.io/aoe2-genie-tooling/"
Issues = "https://github.com/GoKuModder/aoe2-genie-tooling/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["Actual_Tools/tests"]

[tool.coverage.run]
omit = ["*/tests/*", "*/__pycache__/*"]
