[package]
name = "genie_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "genie_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37", "auto-initialize"] }
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
flate2 = "1.1.5"
